# music-gen

./: .gitignore  Makefile  README.md  environment.yaml  main.py  process_data.py  pyproject.toml
notebooks/: 1.0-setup.ipynb  1.0-wav2freq.ipynb  2.3-BaseTransformer.ipynb  cnn-test.ipynb  test-LSTM.ipynb  test-ast.ipynb  test-cnn.ipynb  test_ast.ipynb  train-test.ipynb  train_LSTM.ipynb
src/: __init__.py
src/custom_types/: data_types.py  preprocessor.py
src/data/: __init__.py  dataset.py  dataset_random.py  loader.py
src/features/: __init__.py  fft.py  fragmentation.py  preprocessor.py
src/models/: LSTM_model.py  __init__.py  base_transformer.py  cnn.py  mlp.py  spectro_transformer.py  trainer.py
src/visualization/: __init__.py  audio_vis.py  visualization.py
