[tool.poetry]
name = "a2a-music-gen"
version = "0.0.1"
description = "Audio-to-Audio Performance-Grade Music Generation with Deep Neural Networks"
authors = ["rainyuxuan <yu2001xuan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^68.2.2"
# Machine learning
numpy = "^1.26.4"
pandas = "^1.3.3"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
torch = "^2.2.0"
torchaudio = "^2.2.1"
# Data preprocessing
librosa = "^0.10.1"
transformers = "^4.39.3"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^24.2.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
